fix logo on dark mode

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -174,6 +174,9 @@ a.secondary {
     --button-primary-hover: #ccc;
     --button-secondary-hover: #1a1a1a;
   }
+  .logo {
+    filter: unset;
+  }
   .sectionMainSix {
     background-color: #f9e6baa5;
     color: #000;
